client/src/index.css
* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
}

a {
    color: var(--black);
    text-decoration: none;
}

.border {
    border: 1px solid black;
}

html {
    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
}

h1 {
    font-size: 42px;
}

h2 {
    font-size: 28px;
}

select {
    appearance: none;
}

:root {
    --white: #ffffff;
    --pale-grey: #f6f7f3;
    --light-grey: #e5e8e1;
    --grey: #acaca7;
    --dark-grey: #848484;
    --light-black: #3c3c3c;
    --black: #2c2c2c;
    --pale-green: #ecfad4;
    --light-green: #a4d454;
    --green: #80b24b;
    --darker-green: #539142;
    --dark-green: #4c843c;
}

.page {
    position: relative;
    min-width: 940px;
    width: 940px;
}

.relative {
    position: relative;
}

.underline {
    text-decoration: underline;
}

/* font size */
.small {
    font-size: 13px;
}

.medium {
    font-size: 18px;
    font-weight: 500;
}

.large {
    font-size: 26px;
}

/* styling */
.underlined {
    text-decoration: underline;
}

.bold {
    font-weight: 600;
}

/* colours */
.bg-white {
    background-color: var(--white);
}

.white {
    color: var(--white);
}

.bg-pale-grey {
    background-color: var(--pale-grey);
}

.pale-grey {
    background-color: var(--pale-grey);
}

.bg-light-grey {
    background-color: var(--light-grey);
}

.light-grey {
    color: var(--light-grey);
}

.bg-grey {
    background-color: var(--grey);
}

.grey {
    color: var(--grey);
}

.bg-dark-grey {
    background-color: var(--dark-grey);
}

.dark-grey {
    color: var(--dark-grey);
}

.bg-light-black {
    background-color: var(--light-black);
}

.light-black {
    color: var(--light-black);
}

.bg-black {
    background-color: var(--black);
}

.black {
    color: var(--black);
}

.bg-pale-green {
    background-color: var(--pale-green);
}

.bg-light-green {
    background-color: var(--light-green);
}

.light-green {
    color: var(--light-green);
}

.bg-green {
    background-color: var(--green);
}

.green {
    color: var(--green);
}

.bg-dark-green {
    background-color: var(--dark-green)
}

.dark-green {
    color: var(--dark-green)
}

.red {
    color: red;
}

/* flexbox */
.flex {
    display: flex;
}

.flex-col {
    flex-direction: column;
}

.flex-row {
    flex-direction: row;
}

.flex-ai-c {
    align-items: center;
}

.flex-ai-fs {
    align-items: flex-start;
}

.flex-ai-fe {
    align-items: flex-end;
}

.flex-jc-c {
    justify-content: center;
}

.flex-jc-sa {
    justify-content: space-around;
}

.flex-jc-sb {
    justify-content: space-between;
}

.flex-jc-se {
    justify-content: space-evenly;
}

.flex-jc-fe {
    justify-content: flex-end;
}

.flex-jc-fs {
    justify-content: flex-start;
}

/* input */
.form-group {
    padding-top: 10px;
    padding-bottom: 10px;
    position: relative;
    width: 100%;
}

div[class~="flex-row"] > .form-group + .form-group {
    margin-left: 10px;
}

.form-control {
    background-color: transparent;
    border: 1px solid var(--black);
    border-radius: 5px;
    margin-top: 5px;
    margin-right: 5px;
    padding: 10px 10px 10px 10px;
    font-size: 16px;
    line-height: 1.5;
    width: 100%;
}

.form-control:focus {
    outline: 3px solid rgba(0, 0, 0, 0.5);
}

label {
    font-weight: 600;
}

::placeholder {
    color: var(--dark-grey);
}

input[type="search"]::-webkit-search-decoration,
input[type="search"]::-webkit-search-cancel-button,
input[type="search"]::-webkit-search-results-button,
input[type="search"]::-webkit-search-results-decoration {
  -webkit-appearance:none;
}

/* buttons */
.btn {
    font-weight: 400;
    text-align: center;
    white-space: nowrap;
    vertical-align: middle;
    cursor: pointer;
    border: 1px solid transparent;
    padding: 10px 10px;
    font-size: 16px;
    line-height: 1.5;
    border-radius: 7px;
}

.btn:hover {
    text-decoration: none;
}

.btn:active {
    transition: 0.2s;
    transform: scale(0.95);
}

.btn[class~="bg-black"]:hover {
    background-color: var(--light-black);
}

.btn[class~="bg-light-grey"]:hover {
    background-color: var(--white);
}

.btn[class~="bg-light-green"]:hover {
    background-color: var(--pale-green);
}

.btn[class~="bg-dark-green"]:hover {
    background-color: var(--darker-green);
    border-color: var(--darker-green);
}

.btn[class~="bg-white"]:hover {
    background-color: var(--pale-green);
}

.btn-outline {
    border: 2px solid;
}

